--- a/templates/new-task.html
+++ b/templates/new-task.html
@@ -1,19 +1,58 @@
-<h3>My Todos</h3>
-<table>
-	<tr>
-		<th>#</th>
-		<th>Description</th>
-		<th>Category</th>
-		<th>Priority</th>
-		<th>Creation date</th>
-	</tr>
-	{%- for todo in todos %}
-		<tr>
-			<td>{{ loop.index }}</td>
-			<td>{{ todo.description }}</td>
-			<td>{{ todo.category.name }}</td>
-			<td> {{ todo.priority.name }}</td>
-			<td>{{ todo.creation_date }}</td>
-		</tr>
-	{%- endfor %}
-</table>
+{% extends "layout.html" %}
+{% block content %}
+    <form action="" method=post>
+    <h2>{%- if todo is defined %} Edit {% else %} Create new {% endif -%}Todo</h2>
+        <div class="control-group">
+            <div class="control-group" >
+                <div class="controls">
+                    <select class="selectpicker" name="category" required>
+                        {% for category in categories %}
+                            <option value="{{ category.id }}" {%if todo is defined %}{% if todo.category_id == category.id %} selected {% endif %}{% endif %}>{{ category.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            {#
+            <hr>
+            <div class="control-group">
+                <div class="controls">
+                    <select class="selectpicker" name="priority" required>
+                        {% for priority in priorities %}
+                                <option value="{{ priority.id }}" {% if todo is defined %}{% if todo.priority_id == priority.id %} selected {% endif %}{% endif %}>{{ priority.name }}</option>
+                        {% endfor %}
+                    </select>
+                </div>
+            </div>
+            #}
+            <hr>
+            <div class="control-group">
+                <div class="controls">
+                    <input 
+                        type="text" 
+                        id="description" 
+                        name="description" 
+                        maxlength="60" 
+                        class="form-control input-xlarge"
+                        placeholder="Describe TODO" 
+                        {% if todo is defined -%}
+                            value="{{ todo.description }}"
+                        {% endif -%}
+                        required
+                      />
+                </div>
+            </div>
+        </div>
+        <hr>
+        <div class="control-group">
+            <div class="controls">
+                <button type="submit" class="btn btn-success">
+                    {% if todo %}
+                        Save
+                    {% else %}
+                        Create Todo
+                    {% endif %}
+                </button>
+            </div>
+        </div>
+    </form>
+{% endblock %}
